# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "vlint"
version = "0.0.9"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Lint and format code using native tools or containers"
repository = "https://github.com/t-c-l-o-u-d/vlint"
keywords = ["linter", "lint", "code-quality"]
categories = ["development-tools"]
rust-version = "1.96.0"

[dependencies]
anyhow = "1.0.102"
libc = "0.2.186"
regex = "1.12.3"
which = "8.0.2"
ignore = "0.4.25"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"


[profile.release]
lto = true
codegen-units = 1
strip = true
